--- a/mobile/android/app/src/main/res/values/styles.xml
+++ b/mobile/android/app/src/main/res/values/styles.xml
@@ -2,8 +2,8 @@
   <!-- Base application theme. -->
   <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
     <!-- Customize your theme here. -->
-    <item name="colorPrimary">#FBBC31</item>
-    <item name="colorPrimaryDark">#DB9C11</item>
-    <item name="colorAccent">#FBBC31</item>
+    <item name="colorPrimary">#005050</item>
+    <item name="colorPrimaryDark">#002525</item>
+    <item name="colorAccent">#005050</item>
   </style>
 </resources>
