Adds ordering to paragraph

--- a/app/views/rails_admin/main/_paragraph_fields.html.erb
+++ b/app/views/rails_admin/main/_paragraph_fields.html.erb
@@ -9,6 +9,8 @@
   <div class="col-sm-4">
     <%= ff.label(:style)%>
     <%= ff.text_field(:style, class: "form-control")%>
+    <%= ff.label(:ordering)%>
+    <%= ff.text_field(:ordering, class: "form-control")%>
     <% ff.link_to_remove('Remove') %>
   </div>
 </div>
