Fixing timeout bug

--- a/app/views/reports/_header.pdf.erb
+++ b/app/views/reports/_header.pdf.erb
@@ -1,7 +1,7 @@
 <meta charset="utf-8" />
 <div class="header">
   <div class="container">
-    <%= image_tag(embed_remote_image('https://bahai-brasil.herokuapp.com/logo.png', 'image/jpg'), class: :logo) %>
+    <%= image_tag(embed_remote_image('https://s3-sa-east-1.amazonaws.com/bahai-brasil/logo.png', 'image/jpg'), class: :logo) %>
     <div class="title">
       Bahá'í Brasil
     </div>
