Adding the page editor

--- a/app/views/front/index.html.erb
+++ b/app/views/front/index.html.erb
@@ -2,6 +2,7 @@
   var pages = <%= Page.all.to_json.html_safe %>
   var logoWhite = "<%= asset_url('logo-white.png') %>"
   var logoGreen = "<%= asset_url('logo-green.png') %>"
+  var user = <%= current_user.to_json.html_safe %>
 </script>
 
 <div id="react-root"/>
