--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -1,6 +1,6 @@
 @font-face {
   font-family: 'bree-serif';
-  src:url('bree_serif.ttf');
+  src: font-url('bree_serif.ttf');
   font-weight: normal;
   font-style: normal;
 }
