--- a/app/views/front/index.html.erb
+++ b/app/views/front/index.html.erb
@@ -12,9 +12,12 @@
     greenBackground: "<%= asset_url('green-background.png') %>",
     whiteBackground: "<%= asset_url('white-background.png') %>",
     homepageBackground: "<%= asset_url('homepage-background.png') %>",
+
+    //homeBanner: "<%= asset_url('homepage.png') %>",
+    homeBanner: "<%= asset_url('comunidade-1.jpg') %>",
     vidaEspiritualBanner: "<%= asset_url('vida-espiritual-banner.png') %>",
 
-    logo: "<%= asset_url('logo-comunidade-bahai-wb.png') %>",
+    logo: "<%= asset_url('logo.png') %>",
   }
 </script>
 
