--- a/app/views/front/index.html.erb
+++ b/app/views/front/index.html.erb
@@ -18,6 +18,10 @@
     vidaEspiritualBanner: "<%= asset_url('vida-espiritual-banner.png') %>",
 
     logo: "<%= asset_url('logo.png') %>",
+
+    jornal: "<%= asset_url('jornal.png') %>",
+    star: "<%= asset_url('star.png') %>",
+    microfone: "<%= asset_url('microfone.png') %>",
   }
 </script>
 
