Adding Video to Banner

--- a/app/views/front/index.html.erb
+++ b/app/views/front/index.html.erb
@@ -13,8 +13,6 @@
     whiteBackground: "<%= asset_url('white-background.png') %>",
     homepageBackground: "<%= asset_url('homepage-background.png') %>",
 
-    //homeBanner: "<%= asset_url('homepage.png') %>",
-    homeBanner: "<%= asset_url('comunidade-1.jpg') %>",
     vidaEspiritualBanner: "<%= asset_url('vida-espiritual-banner.png') %>",
 
     logo: "<%= asset_url('logo.png') %>",
@@ -23,6 +21,12 @@
     star: "<%= asset_url('star.png') %>",
     microfone: "<%= asset_url('microfone.png') %>",
   }
+
+  var homeVideos = [
+    "https://s3-sa-east-1.amazonaws.com/bahai-brasil/home-720x400.mp4",
+    "https://s3-sa-east-1.amazonaws.com/bahai-brasil/home-960x540.mp4",
+    "https://s3-sa-east-1.amazonaws.com/bahai-brasil/home-1920x1080.mp4",
+  ]
 </script>
 
 <div id="react-root"/>
