--- a/app/views/front/index.html.erb
+++ b/app/views/front/index.html.erb
@@ -22,6 +22,8 @@
     microfone: "<%= asset_url('microfone.png') %>",
   }
 
+  var pages = <%= Page.all.order(:order).to_json.html_safe %>
+
   var homeVideos = [
     "https://s3-sa-east-1.amazonaws.com/bahai-brasil/home-720x400.mp4",
     "https://s3-sa-east-1.amazonaws.com/bahai-brasil/home-960x540.mp4",
