--- a/app/views/front/index.html.erb
+++ b/app/views/front/index.html.erb
@@ -9,6 +9,7 @@
   var env =  "<%= Rails.env %>"
 
   var images = {
+    overlay: "<%= asset_url('overlay.png') %>",
     greenBackground: "<%= asset_url('green-background.png') %>",
     whiteBackground: "<%= asset_url('white-background.png') %>",
     homepageBackground: "<%= asset_url('homepage-background.png') %>",
