--- a/app/views/front/index.html.erb
+++ b/app/views/front/index.html.erb
@@ -2,7 +2,7 @@
 
 <script type="text/javascript">
   var pages = <%= Page.where(parent_page_id: nil).order(:order).to_json(include: :sub_pages).html_safe %>
-  var allPages = <%= Page.all.to_json.html_safe %>
+  var allPages = <%= Page.all.to_json(include: [:sub_pages, parent_page: {include: :sub_pages}]).html_safe %>
   var logoWhite = "<%= asset_url('logo-white.png') %>"
   var logoGreen = "<%= asset_url('logo-green.png') %>"
   var user = <%= current_user.to_json.html_safe %>
